CHATS_SIT/force-app/main/default/objects/batchsit_t_indiv_rat_fees__x/batchsit_t_indiv_rat_fees__x.object-meta.xml
<CustomObject>
    <description>batchsit$t_indiv_rat_fees</description>
    <externalDataSource>Heroku_Connect_datasource</externalDataSource>
    <externalName>batchsit$t_indiv_rat_fees</externalName>
    <label>Current Utilization Detail</label>
    <pluralLabel>Current_Utilization_Details</pluralLabel>
</CustomObject>