CHATS_SIT/force-app/main/default/objects/batchsit_t_indiv_rat_fees__x/fields/amt_act_remaining__c.field-meta.xml
<CustomField>
    <fullName>amt_act_remaining__c</fullName>
    <description>amt_act_remaining</description>
    <externalDeveloperName>amt_act_remaining</externalDeveloperName>
    <label>Remaining Activity Fee</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>