CHATS_SIT/force-app/main/default/objects/batchsit_t_indiv_rat_fees__x/fields/amt_reg_paid__c.field-meta.xml
<CustomField>
    <fullName>amt_reg_paid__c</fullName>
    <description>amt_reg_paid</description>
    <externalDeveloperName>amt_reg_paid</externalDeveloperName>
    <label>Registration Fee Paid</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>