CHATS_SIT/force-app/main/default/objects/batchsit_t_indiv_rat_fees__x/fields/child_name__c.field-meta.xml
<CustomField>
    <fullName>child_name__c</fullName>
    <externalDeveloperName>child_name</externalDeveloperName>
    <label>Child Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>