CHATS_SIT/force-app/main/default/objects/batchsit_t_indiv_rat_fees__x/fields/createdbyid__c.field-meta.xml
<CustomField>
    <fullName>createdbyid__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>createdbyid</description>
    <externalDeveloperName>createdbyid</externalDeveloperName>
    <label>Created By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>batchsit_t_indiv_rat_fees</relationshipName>
    <type>Lookup</type>
</CustomField>