CHATS_SIT/force-app/main/default/objects/batchsit_t_indiv_rat_fees__x/fields/dte_begin_effev__c.field-meta.xml
<CustomField>
    <fullName>dte_begin_effev__c</fullName>
    <description>Effective Begin Date</description>
    <externalDeveloperName>dte_begin_effev</externalDeveloperName>
    <label>Effective Begin Date</label>
    <type>Date</type>
</CustomField>