CHATS_SIT/force-app/main/default/objects/batchsit_t_indiv_rat_fees__x/fields/dte_end_effev__c.field-meta.xml
<CustomField>
    <fullName>dte_end_effev__c</fullName>
    <description>Effective End Date</description>
    <externalDeveloperName>dte_end_effev</externalDeveloperName>
    <label>Effective End Date</label>
    <type>Date</type>
</CustomField>