CHATS_SIT/force-app/main/default/objects/batchsit_t_indiv_rat_fees__x/fields/dte_paid__c.field-meta.xml
<CustomField>
    <fullName>dte_paid__c</fullName>
    <description>dte_paid</description>
    <externalDeveloperName>dte_paid</externalDeveloperName>
    <label>Date Paid</label>
    <type>Date</type>
</CustomField>