CHATS_SIT/force-app/main/default/objects/batchsit_t_indiv_rat_fees__x/fields/idn_adjmt__c.field-meta.xml
<CustomField>
    <fullName>idn_adjmt__c</fullName>
    <description>idn_adjmt</description>
    <externalDeveloperName>idn_adjmt</externalDeveloperName>
    <label>Adjustment Id</label>
    <length>50</length>
    <referenceTargetField>T_ADJMT__c.IDN_EXTNL__c</referenceTargetField>
    <referenceTo>T_ADJMT__c</referenceTo>
    <relationshipLabel>batchsit$t_indiv_rat_fees</relationshipLabel>
    <relationshipName>batchsit_t_indiv_rat_fees</relationshipName>
    <type>IndirectLookup</type>
</CustomField>