CHATS_SIT/force-app/main/default/objects/batchsit_t_indiv_rat_fees__x/fields/idn_auth__c.field-meta.xml
<CustomField>
    <fullName>idn_auth__c</fullName>
    <description>idn_auth</description>
    <externalDeveloperName>idn_auth</externalDeveloperName>
    <label>Authorization Id</label>
    <length>50</length>
    <referenceTargetField>T_AUTH__c.IDN_EXTNL__c</referenceTargetField>
    <referenceTo>T_AUTH__c</referenceTo>
    <relationshipLabel>batchsit$t_indiv_rat_fees</relationshipLabel>
    <relationshipName>batchsit_t_indiv_rat_fees</relationshipName>
    <type>IndirectLookup</type>
</CustomField>