CHATS_SIT/force-app/main/default/objects/batchsit_t_indiv_rat_fees__x/fields/idn_client__c.field-meta.xml
<CustomField>
    <fullName>idn_client__c</fullName>
    <description>idn_client</description>
    <externalDeveloperName>idn_client</externalDeveloperName>
    <label>Individual ID</label>
    <length>50</length>
    <referenceTargetField>T_SBSD_INDIV__c.IDN_EXTNL__c</referenceTargetField>
    <referenceTo>T_SBSD_INDIV__c</referenceTo>
    <relationshipLabel>batchsit$t_indiv_rat_fees</relationshipLabel>
    <relationshipName>batchsit_t_indiv_rat_fees</relationshipName>
    <type>IndirectLookup</type>
</CustomField>