CHATS_SIT/force-app/main/default/objects/batchsit_t_indiv_rat_fees__x/fields/idn_fiscal_rat_fee__c.field-meta.xml
<CustomField>
    <fullName>idn_fiscal_rat_fee__c</fullName>
    <label>RAT Fees External Id</label>
    <length>50</length>
    <referenceTargetField>T_FISCAL_RAT_FEES__c.IDN_EXTNL__c</referenceTargetField>
    <referenceTo>T_FISCAL_RAT_FEES__c</referenceTo>
    <relationshipLabel>batchsit$t_indiv_rat_fees</relationshipLabel>
    <relationshipName>batchsit_t_indiv_rat_fees</relationshipName>
    <type>IndirectLookup</type>
</CustomField>