CHATS_SIT/force-app/main/default/objects/batchsit_t_indiv_rat_fees__x/fields/idn_indiv_rat_fee__c.field-meta.xml
<CustomField>
    <fullName>idn_indiv_rat_fee__c</fullName>
    <description>idn_indiv_rat_fee</description>
    <externalDeveloperName>idn_indiv_rat_fee</externalDeveloperName>
    <label>idn_indiv_rat_fee</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>