CHATS_SIT/force-app/main/default/objects/batchsit_t_indiv_rat_fees__x/fields/idn_provr__c.field-meta.xml
<CustomField>
    <fullName>idn_provr__c</fullName>
    <description>idn_provr</description>
    <externalDeveloperName>idn_provr</externalDeveloperName>
    <label>Provider Id</label>
    <length>50</length>
    <referenceTargetField>T_CHATS_PROVR_STATUS__c.External_ID__c</referenceTargetField>
    <referenceTo>T_CHATS_PROVR_STATUS__c</referenceTo>
    <relationshipLabel>batchsit$t_indiv_rat_fees</relationshipLabel>
    <relationshipName>batchsit_t_indiv_rat_fees</relationshipName>
    <type>IndirectLookup</type>
</CustomField>