CHATS_SIT/force-app/main/default/objects/batchsit_t_indiv_rat_fees__x/fields/lastmodifiedbyid__c.field-meta.xml
<CustomField>
    <fullName>lastmodifiedbyid__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>lastmodifiedbyid</description>
    <externalDeveloperName>lastmodifiedbyid</externalDeveloperName>
    <label>Last Modified By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>batchsit_t_indiv_rat_fees2</relationshipName>
    <type>Lookup</type>
</CustomField>