CHATS_SIT/force-app/main/default/objects/batchsit_t_indiv_rat_fees__x/fields/lastmodifieddate__c.field-meta.xml
<CustomField>
    <fullName>lastmodifieddate__c</fullName>
    <description>lastmodifieddate</description>
    <externalDeveloperName>lastmodifieddate</externalDeveloperName>
    <label>Last Modified Date</label>
    <type>DateTime</type>
</CustomField>